[package]
name = "adc-mcp3008"
version = "0.1.1"
authors = ["Pramode <mail@pramode.in>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "adc"]
description = "Platform agnostic driver written using embedded-hal traits to interface with the MCP3008 / MCP3004 ADC's"
documentation = "https://docs.rs/adc-mcp3008"
license = "MIT / Apache-2.0"
repository = "https://github.com/pcein/adc-mcp3008"
readme = "quickstart.md"

[dependencies]
embedded-hal = "0.1.0"
